--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 100
+  "printWidth": 100,
+  "tailwindFunctions": ["clsx"],
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
